Issue #1260: Changed pedigree template selector size to make it fit on smaller screens

--- a/pedigree/src/main/resources/pedigree/editor.css
+++ b/pedigree/src/main/resources/pedigree/editor.css
@@ -729,12 +729,12 @@
 }
 
 .msdialog-modal-container .pedigree-template-chooser {
-    width: 500px;
+    width: 720px;
 }
 .picture-box {
     display: inline-block;
     box-shadow: rgba(0, 0, 0, 0.5) 0 0 5px 2px;
-    margin: 10px;
+    margin: 14px;
 }
 .picture-box:hover {
     cursor: pointer;
